objects/Ratings_compiled__c.object
<CustomObject>
    <description>Compiled Ratings</description>
    <fields>
        <fullName>AUR__c</fullName>
        <inlineHelpText>Avg. Unit Rate</inlineHelpText>
        <label>AUR</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdjustedHolidayRevenue__c</fullName>
        <label>Adjusted Holiday Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Label__c</fullName>
        <label>Budget Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Budget 1</fullName>
                </value>
                <value>
                    <fullName>Budget 2</fullName>
                </value>
                <value>
                    <fullName>Budget Label</fullName>
                </value>
                <value>
                    <fullName>GM Actual</fullName>
                </value>
                <value>
                    <fullName>GM Budget</fullName>
                </value>
                <value>
                    <fullName>Network Budget</fullName>
                </value>
                <value>
                    <fullName>Sales Goals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <inlineHelpText>Cost Per Impression</inlineHelpText>
        <label>CPM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daypart__c</fullName>
        <label>Daypart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>EM</fullName>
                </value>
                <value>
                    <fullName>LN</fullName>
                </value>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>Total Day</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
                <value>
                    <fullName>LF</fullName>
                </value>
                <value>
                    <fullName>WK</fullName>
                </value>
                <value>
                    <fullName>WKND</fullName>
                </value>
                <value>
                    <fullName>DA - MF</fullName>
                </value>
                <value>
                    <fullName>DA - SS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demographic__c</fullName>
        <label>Demographic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount__c</fullName>
        <inlineHelpText>Total Dollar Amount</inlineHelpText>
        <label>Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Adjustment__c</fullName>
        <label>Holiday Adjustment</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hours_in_Time_Period__c</fullName>
        <formula>IF( Program__c = &quot;a06C000000jmYxZ&quot; , 
CASE(Daypart__c, &quot;EM&quot;,4,&quot;DA&quot;,10,&quot;PR&quot;,5,&quot;ON&quot;,5,24), 

(IF( OR(Program__c = &quot;a06C000001bKYMV&quot;, Program__c = &quot;a06C000000N417Y&quot;, Program__c = &quot;a06C000001EN39f&quot;, Program__c = &quot;a06C0000016caLW&quot;, Program__c = &quot;a06C0000016caLl&quot;, Program__c = &quot;a06C000001EZXFQ&quot;, Program__c = &quot;a06C000001X7iFU&quot;), 
CASE(Daypart__c, &quot;EM&quot;,3,&quot;DA&quot;,9,&quot;PR&quot;,6,&quot;LN&quot;,3,&quot;ON&quot;,3,24), 

(IF(Program__c = &quot;a068000000JJ0Rp&quot;, 
CASE(Daypart__c, &quot;DA&quot;,9,&quot;PR&quot;,6,&quot;ON&quot;,5,24), 

(IF(CONTAINS( Program__r.Name, &quot;a06C000001X8Gaa&quot;), 
CASE(Daypart__c, &quot;DA&quot;,9,&quot;PR&quot;,6,&quot;ON&quot;,9,24), 

(IF(Program__c = &quot;a06C000000ZjoZk&quot;, 
CASE(Daypart__c, &quot;EM&quot;,3,&quot;EF&quot;,3,&quot;ON&quot;,5,&quot;DA&quot;,8,&quot;PR&quot;,4,24),25

)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours in Time Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INV__c</fullName>
        <inlineHelpText>Investment</inlineHelpText>
        <label>INV</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impressions__c</fullName>
        <label>Impressions</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Playback__c</fullName>
        <label>Playback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live+SD | TV | Linear with VOD</fullName>
                </value>
                <value>
                    <fullName>LSD</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Ratings Compiled</relationshipLabel>
        <relationshipName>Ratings_Compiled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RC_Order__c</fullName>
        <description>Classification of the RC object that helps organize goals, and results</description>
        <label>RC Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Dayparts</fullName>
                </value>
                <value>
                    <fullName>Marathon Goals</fullName>
                </value>
                <value>
                    <fullName>Marathon Dayparts</fullName>
                    <default>true</default>
                    <label>Marathon Dayparts</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ratings_ID__c</fullName>
        <formula>Program__r.Name + &quot; &quot; + TEXT(Week__c) + &quot; &quot; + Demographic__c + &quot; &quot; + TEXT(Daypart__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratings ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reconciled__c</fullName>
        <formula>if( Week__c &lt;= Program__r.RCreconciled_Week__c , &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reconciled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Actual or Budget</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                    <default>true</default>
                    <label>Actual</label>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Sales Goals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_M_HH__c</fullName>
        <description>US Households</description>
        <inlineHelpText>US Households in Millions</inlineHelpText>
        <label>US M HH</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_in_Year__c</fullName>
        <label>Week in Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR( CASE( 
MOD( Week__c - DATE(1900, 1, 7), 7), 
0, Week__c - 6, 
1, Week__c, 
2, Week__c -1, 
3, Week__c - 2, 
4, Week__c - 3, 
5, Week__c- 4, 
6, Week__c - 5, DATE(2001, 1, 1))+ 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ratings Compiled</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AUR__c</columns>
        <columns>CPM__c</columns>
        <columns>INV__c</columns>
        <columns>Dollar_Amount__c</columns>
        <columns>Impressions__c</columns>
        <columns>Month__c</columns>
        <columns>Playback__c</columns>
        <columns>Program__c</columns>
        <columns>Source__c</columns>
        <columns>Week__c</columns>
        <columns>Week_in_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>Ratings Compiled Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratings Compiled</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>